Terraform/manifests/services.yml
apiVersion: v1
kind: Service
metadata:
  name: django-web
spec:
  selector:
    app: django-web
  ports:
  - protocol: TCP
    port: 6969
    targetPort: 6969
---
apiVersion: v1
kind: Service
metadata:
  name: web-server
spec:
  selector:
    app: web-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
spec:
  selector:
    app: postgres-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
