Terraform/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-django-project
  labels:
    name: ingress
spec:
  rules:
  - host: "clases.casapatera.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: django-web
            port: 
              number: 6969
      - pathType: Prefix
        path: "/static/"
        backend:
          service:
            name: web-server
            port: 
              number: 80
      - pathType: Prefix
        path: "/media/"
        backend:
          service:
            name: web-server
            port: 
              number: 80
